added dotenv and .env

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "client": "cd client && npm start",
     "server": "nodemon server/server.js",
-    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+    "test": "cd client && npm run test"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
