--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs: 
-  test-pull-request:
+  test_pull_request:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -16,3 +16,4 @@ jobs:
           node-version: 14
       - run: npm ci
       - run: npm test
+      - run: npm run build
