--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -15,5 +15,7 @@ jobs:
         with: 
           node-version: 14
       - run: npm ci
+      - run: npm ci
+        working-directory: client
       - run: npm test
       - run: npm run build
