--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "cd client && npm run build"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "body-parser": "^1.18.3",
     "dotenv": "^10.0.0",
     "express": "^4.16.4",
