--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "google-map-react": "^2.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-geocode": "^0.2.3",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
