--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "build": "cd client && npm run build"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "body-parser": "^1.18.3",
     "dotenv": "^10.0.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mysql2": "^2.3.2",
+    "sequelize": "^6.8.0"
   },
   "devDependencies": {
     "concurrently": "^4.0.1"
