--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,18 +8,16 @@ jobs:
   deploy:
     runs-on: self-hosted
     
-    strategy:
-      matrix:
-        node-version: [14.x]
-    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
       
-      - name: Set up Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - name: Set up Node
+        uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: '14'
+          cache: 'npm'
+          cache-dependency-path: client/package-lock.json
           
       - name: Create .env file    
         run: |
@@ -28,18 +26,10 @@ jobs:
           echo DB_PASSWORD=${{ secrets.DB_PASSWORD }} >> .env
           cat .env
           
-      - name: Cache node modules
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          
-      - name: Install node dependencies    
+      - name: Install node dependencies
         run: npm install
       
-      - name: Install client dependencies
+      - name: Install react dependencies
         run: npm install
         working-directory: client
         
