--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,9 +15,10 @@ jobs:
       - name: Set up Node
         uses: actions/setup-node@v2
         with:
+          id: cache
           node-version: '14'
           cache: 'npm'
-          cache-dependency-path: client/package-lock.json
+          cache-dependency-path: '**/client/package-lock.json'
           
       - name: Create .env file    
         run: |
