--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,3 +44,9 @@ jobs:
         
       - name: Build  
         run: npm run build
+      
+      - name: Restart pm2
+        run: |
+          pm2 stop 0
+          pm2 start 0
+          pm2 save
