--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,19 +12,19 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
       
-      - name: Set up Node
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14'
+#       - name: Set up Node
+#         uses: actions/setup-node@v2
+#         with:
+#           node-version: '14'
           
-      - name: Create or restore cache
-        uses: actions/cache@v2
-        id: cache
-        with: 
-          path: client/node_modules
-          key: ${{  runner.os }}-node-${{ hashFiles('**/client/package-lock.json') }}
-          restore-keys: |
-            ${{  runner.os }}-node-
+#       - name: Create or restore cache
+#         uses: actions/cache@v2
+#         id: cache
+#         with: 
+#           path: client/node_modules
+#           key: ${{  runner.os }}-node-${{ hashFiles('**/client/package-lock.json') }}
+#           restore-keys: |
+#             ${{  runner.os }}-node-
           
       - name: Create .env file    
         run: |
@@ -37,7 +37,7 @@ jobs:
         run: npm install
       
       - name: Install react dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
+#         if: steps.cache.outputs.cache-hit != 'true'
         run: |
           cd client
           npm install
