attempting to format list

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.4",
     "google-map-react": "^2.1.10",
     "mysql2": "^2.3.2",
+    "react-table": "^7.7.0",
     "sass": "^1.43.4",
     "sequelize": "^6.8.0"
   },
