--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID  }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY  }}
-          aws-region: us-east-2c
+          aws-region: us-east-2
           instance-ids: ${{ secrets.INSTANCE_ID  }}
           comment: Deploy the main branch
           working-directory: /home/ubuntu/leaft
