--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,14 +12,14 @@ jobs:
       - uses: actions/checkout@v2
     
       - name: AWS SSM Send Command
-        uses: peterkimzz/aws-ssm-send-command@1.0.1
+        uses: peterkimzz/aws-ssm-send-command@master
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID  }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY  }}
           aws-region: us-east-2
           instance-ids: ${{ secrets.INSTANCE_ID  }}
           comment: Deploy the main branch
-          working-directory: /home/ubuntu/leaft
+          working-directory: /home/ubuntu/hr-rpp29-leaft
           command: /bin/sh ./deploy.sh
       
 #         uses: actions/checkout@v2
