--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.16.4",
     "google-map-react": "^2.1.10",
+    "material-table": "^1.69.3",
     "mysql2": "^2.3.2",
     "react-table": "^7.7.0",
     "sass": "^1.43.4",
