--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
     
       - name: AWS SSM Send Command
-        uses: peterkimzz/aws-ssm-send-command@1.1.1
+        uses: peterkimzz/aws-ssm-send-command@v1.1.1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID  }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY  }}
