--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,19 +9,24 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+      - name: Checkout to repo
       - uses: actions/checkout@v2
     
-      - name: AWS SSM Send Command
-        uses: peterkimzz/aws-ssm-send-command@v1.1.1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID  }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY  }}
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with: 
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-2
-          instance-ids: ${{ secrets.INSTANCE_ID  }}
-          comment: Deploy the main branch
-          working-directory: /home/ubuntu/hr-rpp29-leaft
-          command: ls -a
-#           command: /bin/sh ./deploy.sh
+          
+      - name: Create CodeDeploy Deployment
+        id: deploy
+        run: |
+          aws deploy create-deployment \
+          –application-name nodeblog_application \
+          –deployment-group-name nodeblog_deployment \
+          –deployment-config-name CodeDeployDefault.OneAtATime \
+          –github-location repository=${{ github.repository }},commitId=${{ github.sha }}
       
 #         uses: actions/checkout@v2
       
