--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.16.4",
     "mysql2": "^2.3.2",
