--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,7 @@ jobs:
           touch .env
           echo PORT=5000 >> .env
           echo DB_PASSWORD=${{ secrets.DB_PASSWORD }} >> .env
+          echo MAPS_API_KEY=${{ secrets.MAPS_API_KEY }} >> .env
           cat .env
           
       - name: Install node dependencies
