--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-geocode": "^0.2.3",
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
     "web-vitals": "^1.1.2"
