--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.16.4",
     "mysql2": "^2.3.2",
+    "react-geocode": "^0.2.3",
     "sequelize": "^6.8.0"
   },
   "devDependencies": {
