--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.18.3",
     "dotenv": "^10.0.0",
     "express": "^4.16.4",
