--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "google-map-react": "^2.1.10",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.2",
     "react-geocode": "^0.2.3",
     "react-scripts": "4.0.3",
