--- a/client/package.json
+++ b/client/package.json
@@ -8,16 +8,17 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
+    "date-and-time": "^2.0.1",
     "express": "^4.17.1",
     "google-map-react": "^2.1.10",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
-    "react-transition-group": "4.0.0",
     "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.2",
     "react-geocode": "^0.2.3",
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
+    "react-transition-group": "4.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
