--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.16.4",
     "mysql2": "^2.3.2",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.8.0"
   },
   "devDependencies": {
