--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.18.3",
     "dotenv": "^10.0.0",
     "express": "^4.16.4",
     "mysql2": "^2.3.2",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
     "sass": "^1.43.4",
     "sequelize": "^6.8.0"
   },
