--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.2",
     "react-geocode": "^0.2.3",
+    "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
     "react-transition-group": "4.0.0",
