--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
-    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.0",
     "react-geocode": "^0.2.3",
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
