--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "body-parser": "^1.18.3",
     "dotenv": "^10.0.0",
     "express": "^4.16.4",
+    "express-mysql-session": "^2.1.7",
+    "express-session": "^1.17.2",
     "mysql2": "^2.3.2",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
