--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,9 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
     "react-geocode": "^0.2.3",
     "react-icons": "^4.3.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
     "react-transition-group": "4.0.0",
@@ -26,7 +26,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --coverage",
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:5000",
