--- a/client/package.json
+++ b/client/package.json
@@ -9,15 +9,16 @@
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "date-and-time": "^2.0.1",
+    "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "google-map-react": "^2.1.10",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
     "react-geocode": "^0.2.3",
     "react-icons": "^4.3.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
     "react-transition-group": "4.0.0",
@@ -25,7 +26,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "env-cmd -f ../.env react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
